<resources>

    <!-- General -->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!-- Start screen strings -->
    <string name="SS_app_name">Pickme</string>
    <string name="SS_log_in">Log in!</string>
    <string name="SS_sign_up">Sign up!</string>

    <!-- Sign Up screen strings -->
    <string name="SU_who_are_you">Who are you?</string>

    <string name="blob_content_description">Emoji face with no mouth</string>

</resources>
